ROO-840: Update launch scripts and release build assembly procedure